src/scss/structure/_menu.scss
.menu {
    background: $softblack;
    width: 230px;
    @media (max-width: $medium) {
        width: 50vw;
        left: -50vw;
        position: absolute;
        transition: transform .5s;
        &:target {
            transform: translateX(50vw);
        }
    }
    @media (max-width: $small) {
        width: 100vw;
        left: -100vw;
        &:target {
            transform: translateX(100vw);
        }
    }
}
.search {
    width: 100%;
    padding: 10px;
    display: flex;
}
.search-input {
    width: calc(100% - 36px) !important;
    padding: 0px 10px !important;
    background: $darkgray !important;
    border: none !important;
    border-radius: 5px 0px 0px 5px;
    color: $gray;
    outline: none;
    &::placeholder {
      color: $lightgray;
    }
    &:focus {
        background: white !important;
    }
}
.search-submit {
    width: 36px;
    height: 36px;
    background: $darkgray;
    border: none;
    border-radius: 0px 5px 5px 0px;
    color: $lightgray;
    cursor: pointer;
    .search-input:focus+& {
        background: white;
        color: $gray;
    }
}
.menu-link {
    display: block;
    padding: 12px 15px;
    border-left: 3px solid transparent;
    font-size: 14px;
    line-height: 20px;
    color: $snow;
    text-decoration: none;
    transition: background .2s;
    &:hover {
        background: darken($black, 8);
        border-left-color: $blue;
    }
}
.menu-active {
    color: white;
    background: darken($black, 5);
    border-left-color: $blue;
}
.menu-close {
    position: absolute;
    margin-top: -50px;
}

